<resources>
    <string name="log_in">Log in</string>
    <string name="log_sign">Sign in</string>
    <string name="password">Password</string>
    <string name="task">Task</string>
    <string name="home">Home</string>
    <string name="cat">Categories</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="title_pp">Hola</string>
    <string name="descrip_pp">Your task status for</string>
    <string name="app_name">TodoList</string>
    <string name="hello_blank_fragment">Todo task: </string>
    <!--  To do  -->
    <string name="title_activity_todo">Todo List App</string>
    <!-- Add  -->
    <string name="title_activity_add">Add Task</string>
    <string name="add_fragment_add">Add</string>
    <string name="add_fragment_hint">Description Task</string>
    <string name="action_null">You don\'t have any TODOs yet. \nPress the + button to create your first one</string>
    <string name="title_categories">Categories</string>
    <string-array name="categories">
        <item>Trabajo</item>
        <item>Estudio</item>
        <item>Compras</item>
        <item>Ocio</item>
    </string-array>
    <string name="title_prioridad">Priority</string>
    <string-array name="propiedades">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
    <string name="p_high">HIGH</string>
    <string name="p_medium">MEDIUM</string>
    <string name="p_low">LOW</string>
    <string name="c_work">Work</string>
    <string name="c_study">Study</string>
    <string name="c_shopping">Shopping</string>
    <string name="c_leisure">Leisure</string>
    <string name="c_finance">Finance</string>
    <string name="c_home">Home</string>
    <string name="title_date_due">Date Due</string>
    <string name="today">09/01/2019</string>
</resources>
