<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".view.home.notes.AddNotesFragment">

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="16dp"
        android:textSize="12sp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/addButton"
        android:hint="@string/add_fragment_hint"

        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_alignParentRight="true"
        android:padding="16dp"
        android:text="@string/add_fragment_add" />

    <TextView
        android:id="@+id/spinner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input"
        android:padding="16dp"
        android:textSize="12sp"
        android:text="@string/title_categories">
    </TextView>

    <RadioGroup
        android:id="@+id/radio_group_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_text"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"

        >

        <RadioButton
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:checked="true"
            android:text="@string/c_work" />

        <RadioButton
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/c_study" />

        <RadioButton
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/c_shopping" />

        <RadioButton
            android:id="@+id/c4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/c_leisure" />

        <RadioButton
            android:id="@+id/c5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/c_finance" />

        <RadioButton
            android:id="@+id/c6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/c_home" />
    </RadioGroup>

    <TextView
        android:id="@+id/linea_central"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_cat"
        android:textSize="8sp"
        >
    </TextView>


    <TextView
        android:id="@+id/spinner_text_prio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linea_central"
        android:padding="16dp"
        android:text="@string/title_prioridad"
        android:textSize="12sp">

    </TextView>


    <RadioGroup
        android:id="@+id/radio_group_prio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_text_prio"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"

        >

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:checked="true"
            android:text="@string/p_high" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/p_medium" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/p_low" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_fecha_ven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_prio"
        android:text="@string/title_date_due"
        android:textSize="12sp">

    </TextView>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="293dp"
        android:layout_centerHorizontal="true"
        android:layout_height="285dp"
        android:layout_below="@id/text_fecha_ven"
        android:layout_marginTop="3dp"
        android:minDate="@string/today"
        android:scrollbars="vertical" />


</RelativeLayout>